Fix z-index popup
ERM26945

[4.x]

(cherry picked from commit c7effbaab27cc73761bc6cfcd8bafaea02ca430f)

--- a/resources/cookieConsent/MWProviderPrompt.less
+++ b/resources/cookieConsent/MWProviderPrompt.less
@@ -31,3 +31,8 @@
 .oo-ui-processDialog {
 	z-index: 100 !important;
 }
+
+/* popup hides behind bs-privacy-cookie-consent-mw-provider-bar */
+.oo-ui-defaultOverlay .oo-ui-floatableElement-floatable {
+	z-index: 2000;
+}
